intermediate/k8/networking-concepts-practice/scenarios/08-debug-tools.yaml
# 08-debug-tools.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["/bin/bash"]
    args: ["-c", "sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-debug
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
